<resources>
    <string name="app_name">Popular Movies</string>

    <string name="content_authority">com.ronypro.android.popularmovies</string>

    <string name="movie_list_load_http_error">Error when try load movie list</string>
    <string name="video_list_load_http_error">Error when try load video list</string>
    <string name="review_list_load_http_error">Error when try load review list</string>
    <string name="network_error">Network error, check your connection and try again</string>
    <string name="title_activity_movie_detail">Movie detail</string>
    <string name="title_activity_settings">Settings</string>

    <string name="action_settings">Settings</string>

    <string name="detail_movie_original_title">Original Title</string>
    <string name="detail_movie_release_date">Release date</string>
    <string name="detail_movie_synopsis">Synopsis</string>
    <string name="detail_movie_poster">Poster</string>
    <string name="detail_movie_videos">Videos</string>
    <string name="detail_movie_reviews">Reviews</string>

    <!-- Strings related to Settings -->
    <string name="pref_movie_list_type_key">pref_movie_list_type</string>
    <string name="pref_movie_list_type_value">popular</string>
    <string name="pref_movie_list_type_message">Sort order</string>
    <string name="detail_movie_release_date_undefined">Undefined</string>
    <string name="detail_movie_synopsis_undefined">Undefined</string>
    <string name="video_player_not_supported">Video player not supported</string>
    <string name="review_content">Review</string>
    <string name="review_author">Author</string>
    <string-array name="pref_movie_list_type_titles">
        <item>Popular</item>
        <item>Top rated</item>
        <item>Favorite</item>
    </string-array>
    <string-array name="pref_movie_list_type_values">
        <item>popular</item>
        <item>top_rated</item>
        <item>favorite</item>
    </string-array>


</resources>
