<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_movie_detail"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.ronypro.android.popularmovies.view.activity.MovieDetailActivity"
    tools:showIn="@layout/activity_movie_detail">

    <LinearLayout
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageButton
            android:id="@+id/detail_movie_favorite_image_button"
            tools:visibility="visible"
            android:visibility="invisible"
            android:src="@drawable/ic_favorite"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:layout_width="48dp"
            android:layout_height="48dp" />

        <TextView
            android:id="@+id/detail_movie_original_title_textview"
            tools:text="@string/detail_movie_original_title"
            style="@style/TextAppearance.AppCompat.Medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <RatingBar
            android:id="@+id/detail_movie_vote_average_ratingbar"
            android:isIndicator="true"
            android:numStars="5"
            android:layout_marginTop="@dimen/movie_detail_info_margin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:text="@string/detail_movie_release_date"
            style="@style/TextAppearance.AppCompat.Small"
            android:layout_marginTop="@dimen/movie_detail_info_margin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/detail_movie_release_date_textview"
            tools:text="@string/detail_movie_release_date"
            style="@style/TextAppearance.AppCompat.Medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:text="@string/detail_movie_synopsis"
            style="@style/TextAppearance.AppCompat.Small"
            android:layout_marginTop="@dimen/movie_detail_info_margin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/detail_movie_synopsis_textview"
            tools:text="@string/detail_movie_synopsis"
            style="@style/TextAppearance.AppCompat.Medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:text="@string/detail_movie_videos"
            style="@style/TextAppearance.AppCompat.Small"
            android:layout_marginTop="@dimen/movie_detail_info_margin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/detail_movie_videos_list_recycler_view"
            app:layoutManager="android.support.v7.widget.LinearLayoutManager"
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:text="@string/detail_movie_reviews"
            style="@style/TextAppearance.AppCompat.Small"
            android:layout_marginTop="@dimen/movie_detail_info_margin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/detail_movie_reviews_list_recycler_view"
            app:layoutManager="android.support.v7.widget.LinearLayoutManager"
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:text="@string/detail_movie_poster"
            style="@style/TextAppearance.AppCompat.Small"
            android:layout_marginTop="@dimen/movie_detail_info_margin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <ImageView
            android:id="@+id/detail_movie_poster_imageview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>

</ScrollView>
